# riscv_hypervisor

./: .gdbinit  .gitmodules  Makefile  Readme.md  kernel.sh  machine.sh
dtb/: dtb.txt  obtain.sh  riscv64-virt.dtb  riscv64-virt.dts
notes/: analysis.txt  bao.txt  compressed.txt  hart.txt  install.txt  interrupts.txt  memory_management.txt  memory_model.txt  pci.txt  plic.txt  questions.txt  riscv_architecture.txt  sbi.txt  sfence.txt  stupid_things.txt  sv39.txt  todo.txt  traps.txt
notes/random_theory/: memory_model.txt  physical_memory_protections.txt
src/: CMakeLists.txt  Makefile  assumptions.txt  boot.S  dtb.h  dummy.c  kmem.c  linker.ld  linkerscript.c  machine.c  main.c  riscv.h  riscv_hypervisor.h  sboot.S  start.c  trap.S  trap.c  types.h  vmem.c
src/core/: CMakeLists.txt  cpu.c  early_boot.c  entry.S  linkerscript.c  main.c  sboot.S  trap.S  trap.c  vcpu.c  vm_run.c
src/driver/: cpu.c  pci.c  plic.c  uart.c
src/driver/uart/: CMakeLists.txt  uart.S
src/driver/uart/include/: uart.h
src/guest/: vm_config.c
src/guest/imgs/: refresh.sh
src/guest/iscream/: Makefile  linkerscript.ld  tags
src/guest/iscream/core/: main.S
src/guest/keygrab/: Makefile  debug.sh  linkerscript.ld
src/guest/keygrab/core/: main.S
src/guest/keygrab/driver/: plic.c  uart.c
src/guest/keygrab/include/: dtb.h
src/guest/printer/: Makefile  linkerscript.ld  main.S  tags
src/guest/printer/core/: main.S
src/guest/printer/include/: sbi.h
src/guest/printer/lib/: sbi.c
src/guest/test_plic_emulation/: Makefile  linkerscript.ld
src/guest/test_plic_emulation/core/: main.S
src/guest/xv6-riscv/: Makefile
src/guest/xv6-riscv/kernel/: bio.c  buf.h  entry.S  file.c  fs.c  kalloc.c  kernel.ld  log.c  main.c  memlayout.h  proc.c  riscv.h  trap.c  virtio_disk.c
src/guest/xv6-riscv/user/: user.h  user.ld  usertests.c
src/helper/: linkerscript.c  pgtable.py  scripts.py  structs_in_asm.c
src/include/: bits.h  clint.h  cpu.h  defs.h  dtb.h  emulate.h  lock.h  memory.h  panic.h  riscv.h  riscv_hypervisor.h  sbi.h  stdio.h  string.h  test.h  types.h  vcpu.h  vm_config.h  vplic.h
src/include/arch/: riscv.h  types.h
src/lib/: .sbi.c.swp  bits.c  lock.c  printf.c  sbi.c  spinlock.S  spinlock.c  string.c
src/lib/print/: CMakeLists.txt  print.c
src/lib/print/include/: print.h
src/lib/printf/: CMakeLists.txt  printf.c
src/lib/printf/include/: printf.h
src/mem/: CMakeLists.txt  kmem.c  vmem.c
src/mem/mmu/: CMakeLists.txt  early_boot.S
src/mem/mmu/include/: mem.h
src/mem/mpu/: early_boot.S
src/mem/mpu/include/: mem.h
src/platform/crosscon_soc/: platform.cmake
src/platform/crosscon_soc/include/: dtb.h
src/platform/riscv64-virt/: platform.cmake
src/platform/riscv64-virt/include/: dtb.h
src/test/: exception_tests.S  exception_tests.c  lock_test.c  printf_test.c  spinlock_test.c  test.c
src/util/: asm_struct_offset.h
src/virtual/: vcpu.c  vplic.c  vvirtio_mmio.c
